@@ -50,7 +50,6 @@ import org.graalvm.compiler.replacements.SnippetTemplate;
 import org.graalvm.compiler.replacements.SnippetTemplate.Arguments;
 import org.graalvm.compiler.replacements.SnippetTemplate.SnippetInfo;
 import org.graalvm.compiler.replacements.Snippets;
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
 import org.graalvm.compiler.word.Word;
 import org.graalvm.nativeimage.CurrentIsolate;
 import org.graalvm.nativeimage.ImageSingletons;
@@ -92,21 +91,19 @@ import com.oracle.svm.core.jdk.PlatformNativeLibrarySupport;
 import com.oracle.svm.core.jdk.RuntimeSupport;
 import com.oracle.svm.core.log.Log;
 import com.oracle.svm.core.option.RuntimeOptionParser;
-import com.oracle.svm.core.os.MemoryProtectionKeyProvider;
+import com.oracle.svm.core.os.MemoryProtectionProvider;
 import com.oracle.svm.core.snippets.SnippetRuntime;
 import com.oracle.svm.core.snippets.SnippetRuntime.SubstrateForeignCallDescriptor;
 import com.oracle.svm.core.snippets.SubstrateForeignCallTarget;
 import com.oracle.svm.core.stack.StackOverflowCheck;
-import com.oracle.svm.core.thread.JavaThreads;
+import com.oracle.svm.core.thread.PlatformThreads;
 import com.oracle.svm.core.thread.Safepoint;
 import com.oracle.svm.core.thread.VMOperationControl;
 import com.oracle.svm.core.thread.VMThreads;
 import com.oracle.svm.core.thread.VMThreads.SafepointBehavior;
 import com.oracle.svm.core.util.VMError;
 
-// Checkstyle: stop
-import sun.misc.Unsafe;
-// Checkstyle: resume
+import jdk.internal.misc.Unsafe;
 
 /**
  * Snippets for calling from C to Java. See {@link CEntryPointActions} and
@@ -140,7 +137,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     public static native int runtimeCall(@ConstantNodeParameter ForeignCallDescriptor descriptor, CEntryPointCreateIsolateParameters parameters, int vmThreadSize);
 
     @NodeIntrinsic(value = ForeignCallNode.class)
-    public static native int runtimeCall(@ConstantNodeParameter ForeignCallDescriptor descriptor, Isolate isolate, boolean inCrashHandler, int vmThreadSize);
+    public static native int runtimeCall(@ConstantNodeParameter ForeignCallDescriptor descriptor, Isolate isolate, boolean startedByIsolate, boolean inCrashHandler, int vmThreadSize);
 
     @NodeIntrinsic(value = ForeignCallNode.class)
     public static native int runtimeCall(@ConstantNodeParameter ForeignCallDescriptor descriptor, Isolate isolate);
@@ -172,8 +169,8 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     public static void setHeapBase(PointerBase heapBase) {
         if (hasHeapBase()) {
             writeCurrentVMHeapBase(heapBase);
-            if (MemoryProtectionKeyProvider.isAvailable()) {
-                MemoryProtectionKeyProvider.singleton().unlockCurrentIsolate();
+            if (MemoryProtectionProvider.isAvailable()) {
+                MemoryProtectionProvider.singleton().unlockCurrentIsolate();
             }
         } else {
             writeCurrentVMHeapBase(WordFactory.nullPointer());
@@ -222,12 +219,12 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
                 return CEntryPointErrors.THREADING_INITIALIZATION_FAILED;
             }
         }
-        error = attachThread(isolate.read(), false, vmThreadSize);
+        error = attachThread(isolate.read(), false, false, vmThreadSize);
         if (error != CEntryPointErrors.NO_ERROR) {
             return error;
         }
 
-        JavaThreads.singleton().initializeIsolate();
+        PlatformThreads.singleton().initializeIsolate();
 
         return CEntryPointErrors.NO_ERROR;
     }
@@ -257,22 +254,20 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         boolean firstIsolate = false;
 
         final long initStateAddr = FIRST_ISOLATE_INIT_STATE.get().rawValue();
-        final Unsafe unsafe = GraalUnsafeAccess.getUnsafe();
-        int state = unsafe.getInt(initStateAddr);
+        int state = Unsafe.getUnsafe().getInt(initStateAddr);
         if (state != FirstIsolateInitStates.SUCCESSFUL) {
-            firstIsolate = unsafe.compareAndSwapInt(null, initStateAddr, FirstIsolateInitStates.UNINITIALIZED, FirstIsolateInitStates.IN_PROGRESS);
-            if (firstIsolate) {
-                PlatformNativeLibrarySupport.singleton().setIsFirstIsolate();
-            } else {
+            firstIsolate = Unsafe.getUnsafe().compareAndSetInt(null, initStateAddr, FirstIsolateInitStates.UNINITIALIZED, FirstIsolateInitStates.IN_PROGRESS);
+            if (!firstIsolate) {
                 while (state == FirstIsolateInitStates.IN_PROGRESS) { // spin-wait for first isolate
                     PauseNode.pause();
-                    state = unsafe.getIntVolatile(null, initStateAddr);
+                    state = Unsafe.getUnsafe().getIntVolatile(null, initStateAddr);
                 }
                 if (state == FirstIsolateInitStates.FAILED) {
                     return CEntryPointErrors.ISOLATE_INITIALIZATION_FAILED;
                 }
             }
         }
+        Isolates.setCurrentIsFirstIsolate(firstIsolate);
 
         /*
          * The VM operation thread must be started early as no VM operations can be scheduled before
@@ -307,7 +302,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         boolean success = PlatformNativeLibrarySupport.singleton().initializeBuiltinLibraries();
         if (firstIsolate) { // let other isolates (if any) initialize now
             state = success ? FirstIsolateInitStates.SUCCESSFUL : FirstIsolateInitStates.FAILED;
-            unsafe.putIntVolatile(null, initStateAddr, state);
+            Unsafe.getUnsafe().putIntVolatile(null, initStateAddr, state);
         }
 
         if (!success) {
@@ -323,9 +318,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
         try {
             RuntimeSupport.executeInitializationHooks();
         } catch (Throwable t) {
-            // Checkstyle: stop (printStackTrace below is going to write to System.err too)
             System.err.println("Uncaught exception while running initialization hooks:");
-            // Checkstyle: resume
             t.printStackTrace();
             return CEntryPointErrors.ISOLATE_INITIALIZATION_FAILED;
         }
@@ -334,12 +327,13 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     }
 
     @Snippet
-    public static int attachThreadSnippet(Isolate isolate, boolean ensureJavaThread, boolean inCrashHandler, @ConstantParameter int vmThreadSize) {
+    public static int attachThreadSnippet(Isolate isolate, boolean startedByIsolate, boolean ensureJavaThread,
+                    boolean inCrashHandler, @ConstantParameter int vmThreadSize) {
         if (MultiThreaded.getValue()) {
             writeCurrentVMThread(WordFactory.nullPointer());
         }
 
-        int error = runtimeCall(ATTACH_THREAD, isolate, inCrashHandler, vmThreadSize);
+        int error = runtimeCall(ATTACH_THREAD, isolate, startedByIsolate, inCrashHandler, vmThreadSize);
         if (error != CEntryPointErrors.NO_ERROR) {
             return error;
         }
@@ -355,7 +349,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
 
     @Uninterruptible(reason = "Thread state not yet set up.")
     @SubstrateForeignCallTarget(stubCallingConvention = false)
-    private static int attachThread(Isolate isolate, boolean inCrashHandler, int vmThreadSize) {
+    private static int attachThread(Isolate isolate, boolean startedByIsolate, boolean inCrashHandler, int vmThreadSize) {
         int sanityError = Isolates.checkSanity(isolate);
         if (sanityError != CEntryPointErrors.NO_ERROR) {
             return sanityError;
@@ -369,7 +363,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
             }
             IsolateThread thread = VMThreads.singleton().findIsolateThreadForCurrentOSThread(inCrashHandler);
             if (thread.isNull()) { // not attached
-                int error = attachUnattachedThread(isolate, inCrashHandler, vmThreadSize);
+                int error = attachUnattachedThread(isolate, startedByIsolate, inCrashHandler, vmThreadSize);
                 if (error != CEntryPointErrors.NO_ERROR) {
                     return error;
                 }
@@ -383,7 +377,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     }
 
     @Uninterruptible(reason = "Thread state not yet set up.")
-    private static int attachUnattachedThread(Isolate isolate, boolean inCrashHandler, int vmThreadSize) {
+    private static int attachUnattachedThread(Isolate isolate, boolean startedByIsolate, boolean inCrashHandler, int vmThreadSize) {
         IsolateThread thread = VMThreads.singleton().allocateIsolateThread(vmThreadSize);
         if (thread.isNull()) {
             return CEntryPointErrors.THREADING_INITIALIZATION_FAILED;
@@ -396,7 +390,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
             // print diagnostics. A full attach operation would be too dangerous.
             SubstrateDiagnostics.setOnlyAttachedForCrashHandler(thread);
         } else {
-            int error = VMThreads.singleton().attachThread(thread);
+            int error = VMThreads.singleton().attachThread(thread, startedByIsolate);
             if (error != CEntryPointErrors.NO_ERROR) {
                 VMThreads.singleton().freeIsolateThread(thread);
                 return error;
@@ -412,7 +406,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
 
     @SubstrateForeignCallTarget(stubCallingConvention = false)
     private static void ensureJavaThread() {
-        JavaThreads.ensureJavaThread();
+        PlatformThreads.ensureCurrentAssigned();
     }
 
     @Snippet
@@ -450,7 +444,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
     private static int tearDownIsolate() {
         try {
             RuntimeSupport.executeTearDownHooks();
-            if (!JavaThreads.singleton().tearDown()) {
+            if (!PlatformThreads.singleton().tearDown()) {
                 return CEntryPointErrors.UNSPECIFIED;
             }
 
@@ -669,6 +663,7 @@ public final class CEntryPointSnippets extends SubstrateTemplates implements Sni
                 case AttachThread:
                     args = new Arguments(attachThread, node.graph().getGuardsStage(), tool.getLoweringStage());
                     args.add("isolate", node.getParameter());
+                    args.add("startedByIsolate", node.getStartedByIsolate());
                     args.add("ensureJavaThread", node.getEnsureJavaThread());
                     args.add("inCrashHandler", node.isCrashHandler());
                     args.addConst("vmThreadSize", vmThreadSize);
